--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -9,7 +9,7 @@
   // justify-content: flex-end;
   flex-direction: column;
 
-  background-color: #fff;
+  background-color: #024c3e;
   overflow: hidden;
 
   .header-container {
@@ -61,10 +61,10 @@
         .title-text {
           width: 100%;
           overflow: hidden;
-          color: black;
+          color: white;
           text-overflow: ellipsis;
           white-space: nowrap;
-          font-size: 18px * $hd;
+          font-size: 16px * $hd;
           font-weight: 700;
           line-height: 20px * $hd;
         }
